Add 20 spinning Mirsab ID images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
     </div>
 </header>
 <main class="container">
+    <div class="spinning-images left">
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+    </div>
+    <div class="spinning-images right">
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+        <img src="Mirsab ID.jpg" alt="Spinning Mirsab ID" class="spinning-image" />
+    </div>
     <form id="complaintForm">
         <label for="airline">Airline:</label>
         <select id="airline" name="airline" required>
